--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ android {
     namespace 'com.example.kittynotes'
     compileSdk 33
 
+    viewBinding {
+        enabled = false
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -38,6 +42,11 @@ android {
 }
 
 dependencies {
+
+    // Java language implementation
+    implementation("androidx.fragment:fragment:1.5.6")
+    // Kotlin
+    implementation("androidx.fragment:fragment-ktx:1.5.6")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
